fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
   top: 0;
   background-color: #fff;
   padding: 0 0 20px 0;
+  z-index: 1;
 }
 
 .paginator-div {
